--- a/index.html
+++ b/index.html
@@ -94,8 +94,65 @@
 
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-4">
                     <h2 class="headbox">How I Got Here</h2>
+                    <br />
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <h3>Work History</h3>
+                </div>
+                <div class="col-4">
+                    <h3>Professional Qualifications</h3>
+                </div>
+                <div class="col-4">
+                    <h3>Back End</h3>
+                    <br />
+                    <h3>Front End</h3>
+                </div>
+            </div>
+        </div>
+
+    </Section>
+
+    <!-------------------------------------------------------------How I Add Value -->
+
+    <Section>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <h2 class="headbox">How I Add Value</h2>
+                </div>
+                
+                 <div class="col-6">
+                    <h2 class="headbox">Six values to be listed here</h2>
+                </div>
+                
+                <div class="row">
+                    <div class="col-6">
+                        <h4 class="font-weight-normal">Holding text - all to be updated.</h4>
+                        <br />
+                        <h4 class="font-weight-normal">Holding text - all to be updated.</h4>
+                    </div>
+                </div>
+
+            </div>
+
+    </Section>
+
+    <!-------------------------------------------------------------Contact -->
+
+    <Section>
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2 class="headbox">Contact</h2>
                 </div>
                 <div class="col">
                     <h2 class="headbox">Placeholder 1</h2>
@@ -106,17 +163,6 @@
             </div>
         </div>
 
-
-    </Section>
-
-    <!-------------------------------------------------------------How I Add Value -->
-
-    <Section>
-    </Section>
-
-    <!-------------------------------------------------------------Contact -->
-
-    <Section>
     </Section>
 
     <!-------------------------------------------------------------Footer -->
